# CLIMB2OLIMP

./: .gitignore  README.md  SERVICE_SETUP.md  ecosystem.config.js  ecosystem.config.js.disabled  frontend-pm2.config.js  manage-services.sh  manage-services.sh.disabled  setup-service.sh.disabled
OLIMP/: .env copy  .gitignore  analysis_complete.txt  analysis_pid.txt  debug_llm.py  graph.py  main.py  progress.json  progress_tracker.py  state.py  test_recommend.py
OLIMP_not_working/: LOGGING_README.md  README.md  analysis_pid.txt  analyze_logs.py  debug_llm.py  fix_integration.py  graph.py  logging_utils.py  main.py  minimal_test.py  monitor_olimp.py  pyproject.toml  run_olimp_test.py  test_execution.py  test_first_node.py  test_fix.py  test_graph_execution.py  test_identify_gaps.py  test_imports.py  test_minimal.py  test_recommend_node.py  test_second_node.py  test_simplified_graph.py  test_single_branch.py  test_with_keys.py
backend/: .gitignore  README.md  debug_status.py  ingestion.py  main.py  maturity_levels.json  pyproject.toml  requirements.txt  status_1.json
backend/config/: __init__.py  agents.json  config_manager.py  prompts.json
backend/data/: CLIMB2.json  answer_1.json  answer_1.txt  sample_answer.json
backend/graph/: graph.py  state.py  status_manager.py
backend/graph/nodes/: create_analysts.py  diagnose.py  maturity_level.py  recommend.py  strategic_goal.py  write_report.py
backend/utils/: category_translations.py
frontend/: debug_environ_diff.js  next.config.ts  package-lock.json  package.json  test-table.md  test_olimp_integration.js
(+143 files in other folders)
